add woff font files
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/assets/css/font.scss
+++ b/assets/css/font.scss
@@ -1,23 +1,27 @@
 @font-face {
   font-family: 'Yeezy';
   src: url('../../fonts/yeezy_tstar-regular-webfont.ttf');
+  src: url('../../fonts/yeezy_tstar-regular-webfont.woff') format('woff');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Yeezy';
   src: url('../../fonts/yeezy_tstar-bold-webfont.ttf');
+  src: url('../../fonts/yeezy_tstar-bold-webfont.woff') format('woff');
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Yeezy';
   src: url('../../fonts/yeezy_tstar-heavy-webfont.ttf');
+  src: url('../../fonts/yeezy_tstar-heavy-webfont.woff') format('woff');
   font-weight: bolder;
 }
 
 @font-face {
   font-family: 'Yeezy';
   src: url('../../fonts/yeezy_tstar-light-webfont.ttf');
+  src: url('../../fonts/yeezy_tstar-light-webfont.woff') format('woff');
   font-weight: lighter;
 }
