--- a/index.jade
+++ b/index.jade
@@ -15,7 +15,7 @@ html(lang="en")
     main
       h1 Using the Yeezy logo font on your website
       h1.logo Yeezy
-      p all you have to is copy the snippet below to import the font into your project
+      p all you have to do is copy the snippet below to import the font into your project
       code @import url(http://mcansh.github.io/yeezy-logo-font/assets/css/font.css);
     footer
       a(href="http://github.com/mcansh/yeezy-logo-font") View project on GitHub
